fixing jumbotron image on mobile

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -586,7 +586,7 @@ font-family:'Raleway', sans-serif;
 
 @media only screen and (max-width:768px) {
 
-#section-1 {
+#bs-over .jumbotron{
 	background-attachment: scroll;
 	background-position: cover;
 	width: 100% !important;
